:lipstick: Fix overflow actualités

--- a/src/app/pages/actualite/actualite.component.scss
+++ b/src/app/pages/actualite/actualite.component.scss
@@ -2,16 +2,12 @@ mat-card {
   color: rgba(0, 0, 0, 0.87);
   background-color: white;
   margin: 10px;
-  // max-height: 10px;
-  // text-overflow: ellipsis;
 }
 
-mat-card-content {
+:host.ellipsis mat-card-content {
   max-height: 100px;
   overflow: hidden;
 }
-
-
 
 mat-card:hover {
   box-shadow: 0 11px 15px -7px rgba(0, 0, 0, 0.2), 0 24px 38px 3px rgba(0, 0, 0, 0.14),
