--- a/src/app/pages/actualites/actualites.component.scss
+++ b/src/app/pages/actualites/actualites.component.scss
@@ -12,6 +12,6 @@ app-actualite {
 
 .float {
   position: fixed;
-  bottom: 1rem;
-  right: 1rem;
+  bottom: 2rem;
+  right: 2rem;
 }
